[package]
name = "leetcode_rust"
version = "0.2.4"
edition = "2021"
authors = ["Ryo Light <68205373+CoffeelessProgrammer@users.noreply.github.com>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11.2", features = ["macros"] }
